feat(add) tooltip to show the name of items and indicate the extra drop

--- a/client/src/react-components/MaterialTable/style.css
+++ b/client/src/react-components/MaterialTable/style.css
@@ -13,13 +13,17 @@ p{
 .catalystDiv{
     vertical-align: middle;
     display: inline-block;
-    width: 200px;
-
 }
 
 .miscDiv{
     vertical-align: middle;
     display: inline;
+}
+
+.extraDropWrap{
+    display: inline;
+    position: absolute;
+    margin-left: 1%;
 }
 
 .M5Materials{
