feat(UI) fixed the preloader

--- a/client/src/react-components/MaterialTable/style.css
+++ b/client/src/react-components/MaterialTable/style.css
@@ -19,12 +19,13 @@ span{
 .lowestAPStage, .balancedStage, .dropRateFirstStage{
     font-size: 14px;
 }
-.outLayer{
-    height: 2700px;
-}
 
 .extraDropWrap{
     margin-left: 2%;
+}
+
+.MuiTableCell-root{
+    padding: 0;
 }
 }
 @media only screen and (min-width: 768px)  { body{ font-size: 12px; } 
@@ -34,11 +35,10 @@ span{
 .lowestAPStage, .balancedStage, .dropRateFirstStage{
     font-size: 20px;
 }
-.outLayer{
-    height: 2200px;
-}
 .extraDropWrap{
     margin-left: 1%;
+}.MuiTableCell-root{
+    padding: 0;
 }
  }
 @media only screen and (min-width: 1024px) { body{ font-size: 14px; }
@@ -48,11 +48,11 @@ span{
 .lowestAPStage, .balancedStage, .dropRateFirstStage{
     font-size: 28px;
 }
-.outLayer{
-    height: 2000px;
-}
 .extraDropWrap{
     margin-left: 1%;
+}
+.MuiTableCell-root{
+    padding: 1%;
 }
 }
 @media only screen and (min-width: 1300px) { body{ font-size: 16px; }
@@ -68,9 +68,6 @@ span{
 } 
 .lowestAPStage, .balancedStage, .dropRateFirstStage{
     font-size: 35px;
-}
-.outLayer{
-    height: 1100px;
 }
 .extraDropWrap{
     margin-left: 1%;
@@ -325,5 +322,10 @@ span{
     font-size: x-small;
 }
 .stageWrapper{
-    display: inline
+    display: inline;
+    margin-left: 20px;
+    white-space: nowrap;
+}
+.MuiTableCell-root{
+    border: 1px solid rgba(224, 224, 224, 1);
 }
