--- a/client/src/react-components/MaterialTable/style.css
+++ b/client/src/react-components/MaterialTable/style.css
@@ -27,7 +27,8 @@ span{
 .extraDropWrap{
     transform: scale(0.4);
     position: absolute;
-    margin-left: -13px
+    margin-left: -13px;
+    margin-top: -13px;
 }
 .MT-5{
     width: 33px;
@@ -54,7 +55,8 @@ span{
     transform: scale(0.4);
     position: absolute;
     /* display: inline; */
-    margin-left: -13px
+    margin-left: -13px;
+    margin-top: -13px;
 }
 .MT-5{
     width: 44px;
@@ -77,7 +79,8 @@ span{
     transform: scale(0.4);
     position: absolute;
     /* display: inline; */
-    margin-left: -13px
+    margin-left: -13px;
+    margin-top: -13px;
 }
 .lowestAPStageDetails, .balancedStageDetails, .dropRateFirstStageDetails{
     font-size: 0.7rem;
@@ -114,7 +117,8 @@ span{
     transform: scale(0.4);
     position: absolute;
     /* display: inline; */
-    margin-left: -13px
+    margin-left: -13px;
+    margin-top: -13px;
 }
 .MT-5{
     width: 55px;
