--- a/client/src/react-components/MaterialTable/style.css
+++ b/client/src/react-components/MaterialTable/style.css
@@ -14,6 +14,9 @@ span{
 .modalBlur{
     backdrop-filter: blur(10px);
 }
+.instructions{
+    transform-origin: left center;
+}
 @media only screen and (min-width: 320px)  { body{ font-size: 10px; } 
 .M3Materials{
     width: calc(100vw - 45%);
