--- a/client/src/react-components/SettingsModal/style.css
+++ b/client/src/react-components/SettingsModal/style.css
@@ -4,10 +4,18 @@
     justify-content: center;
 }
 
-.paper{
-    background-color: white;
+.theme--light .paper{
+    background-color: #f5f5f5;
     border: 2px solid #000;
     width: fit-content;
-    box-shadow: 5px 5px lightblue;
+    box-shadow: 5px 5px #add8e6;
+    padding: 1%;
+}
+
+.theme--dark .paper{
+    background-color: #454545;
+    border: 2px solid #000;
+    width: fit-content;
+    box-shadow: 5px 5px #728d96;
     padding: 1%;
 }
